--- a/package.json
+++ b/package.json
@@ -2,34 +2,36 @@
     "name": "stand-blirorlegger-frontend",
     "version": "0.1.0",
     "private": true,
+    "engines": {
+        "node": ">=16.0.0",
+        "npm": ">=8.0.0",
+        "yarn": "please-use-npm"
+    },
     "scripts": {
-        "dev": "next dev",
+        "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "prettier": "prettier --write .",
+        "prepare": "husky install"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^6.1.1",
-        "@fortawesome/free-regular-svg-icons": "^6.1.1",
-        "@fortawesome/free-solid-svg-icons": "^6.1.1",
-        "@fortawesome/react-fontawesome": "^0.1.18",
         "bootstrap": "^5.1.3",
-        "font-awesome": "^4.7.0",
-        "next": "12.1.6",
+        "next": "latest",
         "react": "^18.2.0",
         "react-bootstrap": "^2.3.1",
         "react-dom": "^18.2.0",
         "react-icons": "^4.3.1",
-        "redux": "^4.2.0",
         "sass": "1.43.5"
     },
     "devDependencies": {
+        "@types/node": "^18.7.9",
+        "@types/react": "^18.0.17",
+        "cross-env": "^7.0.3",
         "eslint": "8.14.0",
         "eslint-config-next": "12.1.6",
-        "prettier": "^2.6.2"
-    },
-    "prettier": {
-        "tabWidth": 4,
-        "trailingComma": "none"
+        "husky": "^8.0.1",
+        "prettier": "^2.6.2",
+        "typescript": "^4.7.4"
     }
 }
